--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "main": "argv.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "estest test/test-*.js"
   },
   "keywords": [],
   "author": "Mikeal Rogers <mikeal.rogers@gmail.com> (https://www.mikealrogers.com/)",
   "license": "(Apache-2.0 AND MIT)",
   "devDependencies": {
-    "estest": "^10.2.4",
+    "bent": "^7.3.7",
+    "estest": "^10.3.0",
+    "get-port": "^5.1.1",
     "standard": "^14.3.4"
+  },
+  "dependencies": {
+    "dagdb": "^0.9.0"
   }
 }
