--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "argv.js",
   "type": "module",
   "scripts": {
-    "test": "estest test/test-*.js"
+    "test": "estest test/test-*.js",
+    "build:schema": "ipld-schema to-json README.md > src/pkg/schema.json"
   },
   "keywords": [],
   "author": "Mikeal Rogers <mikeal.rogers@gmail.com> (https://www.mikealrogers.com/)",
@@ -14,6 +15,7 @@
     "bent": "^7.3.7",
     "estest": "^10.3.0",
     "get-port": "^5.1.1",
+    "ipld-schema": "^0.3.2",
     "standard": "^14.3.4"
   },
   "dependencies": {
