--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "@ipld/block": "^6.0.1",
     "dagdb": "^0.9.3",
-    "ipfs": "^0.48.1"
+    "ipfs": "^0.48.1",
+    "acorn": "^7.3.1",
+    "astring": "^1.4.3"
   }
 }
