--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   "author": "Mikeal Rogers <mikeal.rogers@gmail.com> (https://www.mikealrogers.com/)",
   "license": "(Apache-2.0 AND MIT)",
   "standard": {
-    "ignore": [ "test" ]
+    "ignore": [
+      "test"
+    ]
   },
   "devDependencies": {
     "bent": "^7.3.9",
     "estest": "^10.3.1",
-    "get-port": "^5.1.1",
-    "ipld-schema": "^0.3.2",
     "standard": "^14.3.4",
     "tempy": "^0.6.0"
   },
