--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "bent": "^7.3.9",
     "estest": "^10.3.1",
+    "rollup-plugin-preserve-shebangs": "^0.2.0",
     "standard": "^14.3.4",
     "tempy": "^0.6.0"
   },
